<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="80dp"
    android:paddingRight="80dp"
    tools:context="com.example.mpdagang.kotselog.Fragments.NavFrag">


    <Button
        android:id="@+id/btnNav1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/nav_button1"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btnNav2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/nav_button2"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btnNav3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/nav_button3"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btnNav4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/nav_button4"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btnNav5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/nav_button5"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btnNav6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/nav_button6"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btnNav7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/nav_button7"
        android:textSize="20sp" />
</LinearLayout>
